fix(swagger): fix export query args
